table for yield delta, luckiest 1%

--- a/eth2-mev-calc.ipynb
+++ b/eth2-mev-calc.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "183abaed",
    "metadata": {},
    "outputs": [],
@@ -400,6 +400,178 @@
     "    'annual_reward (ETH)': ideal_reward,\n",
     "    'annual_reward_with_mev (ETH)':ideal_reward_with_mev,\n",
     "    'annual_yield (%)': annual_yield,\n",
+    "    'annual_yield_with_mev (%)': annual_yield_with_mev,\n",
+    "    'delta (%)': delta\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "pd.options.display.float_format = '{:,.2f}'.format\n",
+    "df.set_index('n_validators')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bottom-stephen",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>annual_yield_without_mev (%)</th>\n",
+       "      <th>annual_yield_with_mev (%)</th>\n",
+       "      <th>delta (%)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n_validators</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>16384</th>\n",
+       "      <td>23.11</td>\n",
+       "      <td>130.54</td>\n",
+       "      <td>107.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50000</th>\n",
+       "      <td>13.28</td>\n",
+       "      <td>52.66</td>\n",
+       "      <td>39.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100000</th>\n",
+       "      <td>9.44</td>\n",
+       "      <td>31.38</td>\n",
+       "      <td>21.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>120000</th>\n",
+       "      <td>8.62</td>\n",
+       "      <td>27.18</td>\n",
+       "      <td>18.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150000</th>\n",
+       "      <td>7.73</td>\n",
+       "      <td>23.48</td>\n",
+       "      <td>15.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200000</th>\n",
+       "      <td>6.71</td>\n",
+       "      <td>19.09</td>\n",
+       "      <td>12.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>250000</th>\n",
+       "      <td>6.03</td>\n",
+       "      <td>16.72</td>\n",
+       "      <td>10.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300000</th>\n",
+       "      <td>5.51</td>\n",
+       "      <td>14.51</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>312500</th>\n",
+       "      <td>5.41</td>\n",
+       "      <td>14.41</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              annual_yield_without_mev (%)  annual_yield_with_mev (%)  \\\n",
+       "n_validators                                                            \n",
+       "16384                                23.11                     130.54   \n",
+       "50000                                13.28                      52.66   \n",
+       "100000                                9.44                      31.38   \n",
+       "120000                                8.62                      27.18   \n",
+       "150000                                7.73                      23.48   \n",
+       "200000                                6.71                      19.09   \n",
+       "250000                                6.03                      16.72   \n",
+       "300000                                5.51                      14.51   \n",
+       "312500                                5.41                      14.41   \n",
+       "\n",
+       "              delta (%)  \n",
+       "n_validators             \n",
+       "16384            107.44  \n",
+       "50000             39.38  \n",
+       "100000            21.94  \n",
+       "120000            18.56  \n",
+       "150000            15.75  \n",
+       "200000            12.38  \n",
+       "250000            10.69  \n",
+       "300000             9.00  \n",
+       "312500             9.00  "
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Only for the luckiest 1%\n",
+    "n_validators = [524288 // 32, 50000, 100000, 120000, 150000, 200000, 250000, 300000, 10000000 // 32]\n",
+    "staked = [32 * n for n in n_validators] # ETH actively staked in the network\n",
+    "u_bpo = [int(binom.ppf(0.99,31556952/12, 1/n)) for n in n_validators] # blocks produced by luckiest 1%\n",
+    "mean_bpo = [float(binom.mean(31556952/12, 1/n)) for n in n_validators]\n",
+    "\n",
+    "full_reward = [(4 * annualised_base_reward(n)) for n in n_validators]\n",
+    "attestation_reward = [0.75 * f for f in full_reward]\n",
+    "inclusion_reward = [0.25 * f for f in full_reward]\n",
+    "\n",
+    "ideal_reward_with_mev = []\n",
+    "for i in range(len(n_validators)):\n",
+    "    r_att = attestation_reward[i]\n",
+    "    r_inc = inclusion_reward[i]\n",
+    "    ideal_reward_with_mev.append(r_att + r_inc * ((7/8) + (1/8) * u_bpo[i] / mean_bpo[i]))\n",
+    "    ideal_reward_with_mev[i] = ideal_reward_with_mev[i] + (u_bpo[i] * avg_mev_reward_per_block)\n",
+    "\n",
+    "    ideal_reward_without_mev = []\n",
+    "for i in range(len(n_validators)):\n",
+    "    r_att = attestation_reward[i]\n",
+    "    r_inc = inclusion_reward[i]\n",
+    "    ideal_reward_without_mev.append(r_att + r_inc * ((7/8) + (1/8) * u_bpo[i] / mean_bpo[i]))\n",
+    "\n",
+    "\n",
+    "annual_yield_without_mev = [100 * r / 32 for r in ideal_reward_without_mev]\n",
+    "annual_yield_with_mev = [100 * r / 32 for r in ideal_reward_with_mev]\n",
+    "\n",
+    "delta = []\n",
+    "for i in range(len(annual_yield)):\n",
+    "    delta.append(annual_yield_with_mev[i] - annual_yield_without_mev[i])\n",
+    "data = {\n",
+    "    'n_validators': n_validators,\n",
+    "    'annual_yield_without_mev (%)': annual_yield_without_mev,\n",
     "    'annual_yield_with_mev (%)': annual_yield_with_mev,\n",
     "    'delta (%)': delta\n",
     "}\n",
