slight changes by adding 1559 section
to be completed

--- a/eth2-mev-calc.ipynb
+++ b/eth2-mev-calc.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "spoken-privilege",
    "metadata": {},
    "source": [
     "# Analysis of MEV rewards in ETH2\n",
@@ -15,8 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "coordinate-default",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +52,30 @@
   },
   {
    "cell_type": "markdown",
-   "id": "patent-absence",
+   "metadata": {},
+   "source": [
+    "### Factoring in tx_fees from EIP-1559\n",
+    "\n",
+    "Assumptions:\n",
+    "- all PGA trading is now done through Flashbots\n",
+    "\n",
+    "Numbers:\n",
+    "- 5% of Flashbots blocks are occupied by Flashbots bundles\n",
+    "   - using the public API blocks.flashbots.net\n",
+    "   - empirically, with bundle merging this will grow to XX%\n",
+    "- transaction fees activity over the last year from Etherscan\n",
+    "- gasnow.org max/med/min gas prices\n",
+    "\n",
+    "1. Taking the remaining 95% of blockspace, we want to know the ratio of people who pay higher than execution gas price\n",
+    "2. For each block, we take the ratio between speed & normal\n",
+    "    - assuming these people\n",
+    "3. [ADD FURTHER DETAILS]\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Ideal case on infinite timescale\n",
@@ -65,8 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "negative-stereo",
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -105,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "scheduled-accounting",
    "metadata": {
     "scrolled": true
    },
@@ -295,7 +314,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mysterious-nelson",
    "metadata": {},
    "source": [
     "At the current level of validators, we find that MEV can increase validator rewards by XX%, or give an implied yield of ZZ% rather than non-MEV yield of YY%. \n",
@@ -304,7 +322,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specialized-midwest",
    "metadata": {},
    "source": [
     "### ideal case on 1y timescale\n",
@@ -321,7 +338,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "integrated-entrance",
    "metadata": {},
    "source": [
     "\n",
@@ -330,7 +346,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "scientific-river",
    "metadata": {},
    "source": [
     "With 100,000 validators, the mean number of blocks proposed per validator per year is 26.30\n",
@@ -344,7 +359,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "analyzed-iceland",
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +491,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "specified-intranet",
    "metadata": {},
    "source": [
     "Using these numbers, we can plot maximum validator rewards over a finite timescale and notice how a difference in luck influences what the luckiest 1% validators will make in a year, vs the unluckiest 1%."
@@ -486,7 +499,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "constitutional-arctic",
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +567,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dying-jamaica",
    "metadata": {},
    "source": [
     "### Perfect validator on an imperfect network \n",
@@ -582,7 +593,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "vital-equivalent",
    "metadata": {
     "scrolled": true
    },
@@ -630,7 +640,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspected-radiation",
    "metadata": {},
    "source": [
     "### imperfect validator on a perfect network\n",
@@ -641,7 +650,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "prospective-carbon",
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +694,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "developmental-sixth",
    "metadata": {},
    "source": [
     "The figure we find XX% is lower than the figure looking at validator rewards only, which is 43%."
@@ -694,7 +701,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "atomic-moderator",
    "metadata": {},
    "source": [
     "### summary of findings\n",
@@ -710,7 +716,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heavy-stone",
    "metadata": {},
    "source": [
     "#### future model improvements\n",
@@ -737,7 +742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
